# Burury

./: .gitignore  CMakeLists.txt  README.md  purposes.md  styles.qss  todo.md
Burury/: CMakeLists.txt
Burury/RoleSetup/: createNewPage.sh  page_template_cpp  page_template_hpp  page_template_ui
Burury/RoleSetup/Admin/: CMakeLists.txt
Burury/RoleSetup/Admin/src/: ObjectTypeAdministration.cpp
Burury/RoleSetup/General/: CMakeLists.txt
Burury/RoleSetup/General/Ui/: Liderboard.ui  PersonalAccounting.ui
Burury/RoleSetup/General/include/RoleSetup/General/: Liderboard.hpp  Profile.hpp
Burury/RoleSetup/General/src/: Liderboard.cpp  Profile.cpp
Burury/RoleSetup/Manager/: CMakeLists.txt
Burury/RoleSetup/Manager/Ui/: Jobs.ui
Burury/RoleSetup/Manager/include/RoleSetup/Manager/: Jobs.hpp
Burury/RoleSetup/Manager/src/: Jobs.cpp
Burury/RoleSetup/Worker/: CMakeLists.txt
Burury/Service/: CMakeLists.txt
Burury/Service/include/Burury/Service/: Service.hpp
Burury/Service/src/: Service.cpp
Burury/Ui/: Burury.ui  MainPage.ui
Burury/include/: Burury.hpp  Login.hpp  MainPage.hpp  PagerPresets.hpp  Register.hpp
Burury/src/: Burury.cpp  Login.cpp  MainPage.cpp  Register.cpp  main.cpp
BururyDaemon/: CMakeLists.txt
BururyDaemon/cli/: CMakeLists.txt
BururyDaemon/include/: Bururyd.hpp
BururyDaemon/src/: Bururyd.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: Server.hpp
Server/src/: Server.cpp
docs/: compile.sh
docs/uml/: BaseWorkflow.uml
libs/API/: CMakeLists.txt
libs/API/include/API/: API.hpp  CmdError.hpp  Driver.hpp  Handler.hpp  HndlError.hpp  PayloadItem.hpp  Query.hpp  Request.hpp  Role.hpp  Types.hpp  UserGrades.hpp  Utility.hpp  command.hpp  includeHanlders.sh  tables.hpp
libs/API/src/: API.cpp  CmdError.cpp  Driver.cpp  Handler.cpp  HnldError.cpp  PayloadItem.cpp  Utility.cpp  command.cpp
libs/API/src/Handlers/: AddGrade.cpp  AddJob.cpp  AddJobTokens.cpp  AttachJobTokens.cpp  CreateTable.cpp  CreateUser.cpp  EditGrade.cpp  EditJob.cpp  EditSelfInfo.cpp  EditUserInfo.cpp  GetGradeInfo.cpp  GetJobInfo.cpp  GetRoleDetails.cpp  GetSelfInfo.cpp  GetUserInfo.cpp  Identify.cpp  RefuseTokens.cpp  RegisterManager.cpp  RegisterWorker.cpp  RemoveGrade.cpp  RemoveJob.cpp  RequestTokens.cpp  SendMessage.cpp  SendMoney.cpp  SendTokenForCheck.cpp  SetTokenDeadline.cpp  SuspendJob.cpp  SuspendJobToken.cpp  UnattachJobTokens.cpp  UnsuspendJobToken.cpp  UpdateRole.cpp  ValidateConfCode.cpp
libs/Crypto/include/Crypto/: Hash.hpp
libs/Crypto/src/: Hash.cpp
libs/Logger/src/: logger.cpp
libs/Network/include/Network/: SslClientBase.hpp  iiNPack.hpp
libs/Network/src/: iiNPack.cpp
libs/PagesManager/include/PagesManager/: PagesManager.hpp
libs/PagesManager/src/: PagesManager.cpp
libs/Widgets/src/: QSpoiler.cpp
libs/iiServer/: CMakeLists.txt
libs/iiServer/include/iiServer/: SslServer.hpp  iiClient.hpp  iiServer.hpp
libs/iiServer/src/: SslServer.cpp  iiClient.cpp  iiServer.cpp
quick-docs/: API-commands-responce.md  Cross-compiler-dependences.md
(+42 files in other folders)
